--- a/index.html
+++ b/index.html
@@ -3,4 +3,9 @@
 </head>
 
 <a>this is new html page</a>
-<iframe src="https://open.spotify.com/embed/playlist/4S0W78ZPbS6uQXAh2Vvl6a" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+<div>
+    <iframe src="https://open.spotify.com/embed/playlist/4S0W78ZPbS6uQXAh2Vvl6a" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+</div>
+<div>
+    this is the description of the play list
+</div>
