--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <head>
     <link rel="stylesheet" href="test.css">
 </head>
-
-<a>this is new html page</a>
-<div>
-    <iframe src="https://open.spotify.com/embed/playlist/4S0W78ZPbS6uQXAh2Vvl6a" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
-</div>
-<div>
-    this is the description of the play list
+<div class="container">
+    <div class="fixed">
+        <iframe src="https://open.spotify.com/embed/playlist/4S0W78ZPbS6uQXAh2Vvl6a" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+    </div>
+    <div class="flex-item">
+        this is the description of the play list
+    </div>    
 </div>
