--- a/index.html
+++ b/index.html
@@ -1,11 +1,39 @@
 <head>
     <link rel="stylesheet" href="test.css">
 </head>
-<div class="container">
-    <div class="fixed">
-        <iframe src="https://open.spotify.com/embed/playlist/4S0W78ZPbS6uQXAh2Vvl6a" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+<body>
+    <div class="header">
+        <h1>This Month's Songs</h1>
     </div>
-    <div class="flex-item">
-        this is the description of the play list
-    </div>    
-</div>
+    <div class="center">subtitle</div>
+    <div class="center container">
+        <div class="fixed">
+            <iframe src="https://open.spotify.com/embed/playlist/4S0W78ZPbS6uQXAh2Vvl6a" width="300" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+        </div>
+        <div class="flex-item">
+            <p>this is the description of the play listgd</p>
+            <p>this is the description of the play listgd</p>
+            <p>this is the description of the play listgd</p>
+            <p>this is the description of the play listgd</p>
+            <p>this is the description of the play listgd</p>
+            <p>this is the description of the play listgd</p>
+            <p>this is the description of the play listgd</p>
+            <p>this is the description of the play listgd</p>
+            <p>this is the description of the play listgd</p>
+            <p>this is the description of the play listgd</p>
+            <p>this is the description of the play listgd</p>
+            <p>this is the description of the play listgd</p>
+            <p>this is the description of the play listgd</p>
+            <p>this is the description of the play listgd</p>
+            <p>this is the description of the play listgd</p>
+            <p>this is the description of the play listgd</p>
+            <p>this is the description of the play listgd</p>
+            <p>this is the description of the play listgd</p>
+            <p>this is the description of the play listgd</p>
+            <p>this is the description of the play listgd</p>
+            <p>this is the description of the play listgd</p>
+            <p>this is the description of the play listgd</p>
+            <p>this is the description of the play listgd</p>
+        </div>    
+    </div>
+</body>
