--- a/index.html
+++ b/index.html
@@ -5,35 +5,15 @@
     <div class="header">
         <h1>This Month's Songs</h1>
     </div>
-    <div class="center">subtitle</div>
+    <div class="center title"><h2>Jun 2020</h2></div>
     <div class="center container">
         <div class="fixed">
             <iframe src="https://open.spotify.com/embed/playlist/4S0W78ZPbS6uQXAh2Vvl6a" width="300" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
         </div>
         <div class="flex-item">
-            <p>this is the description of the play listgd</p>
-            <p>this is the description of the play listgd</p>
-            <p>this is the description of the play listgd</p>
-            <p>this is the description of the play listgd</p>
-            <p>this is the description of the play listgd</p>
-            <p>this is the description of the play listgd</p>
-            <p>this is the description of the play listgd</p>
-            <p>this is the description of the play listgd</p>
-            <p>this is the description of the play listgd</p>
-            <p>this is the description of the play listgd</p>
-            <p>this is the description of the play listgd</p>
-            <p>this is the description of the play listgd</p>
-            <p>this is the description of the play listgd</p>
-            <p>this is the description of the play listgd</p>
-            <p>this is the description of the play listgd</p>
-            <p>this is the description of the play listgd</p>
-            <p>this is the description of the play listgd</p>
-            <p>this is the description of the play listgd</p>
-            <p>this is the description of the play listgd</p>
-            <p>this is the description of the play listgd</p>
-            <p>this is the description of the play listgd</p>
-            <p>this is the description of the play listgd</p>
-            <p>this is the description of the play listgd</p>
+            <p class="first">It's been a while since the previous list of songs! Here are ten more for a listen.</p>
+            <p>I'm starting with <span class="artist">Kacey Musgraves</span>'s <span class="song">Late To The Party</span>. Somehow a country music outsider and its biggest star, this song inspired me to check out the rest of her not-country-but-country work &bull; I can't help but bounce along to the beat of <span class="song">Fancy Man</span> by <span class="artist">Devendra Banhart</span> - surely, we all like to think of ourselves as a Fancy Man sometimes &bull; Although by <span class="artist">Carlos Forster</span>, the next song, <span class="song">Campfire Songs</span> is actually a duet with M Ward - hence the reason I came across it &bull; In <span class="song">This Tornado Love You</span>, smokey voiced <span class="artist">Neko Case</span> sings about a tornado that's in love with someone - yes, it's that literal - apparently it was a dream she had &bull; I'd vaguely heard of <span class="artist">Vampire Weekend</span>, but hadn't ever heard their songs. My favourite line from <span class="song">Hannah Hunt</span> is <q>A man of faith said hidden eyes could see what I was thinking / I just smiled and told him that was only true of Hannah</q> - I still haven't heard any of their other songs &bull; The three voices in <span class="artist">Alialujah Choir</span> come together to create the beautifully haunting harmonies of <span class="song">A House, A Home</span> &bull; A (relatively) stripped back <span class="artist">St. Vincent</span> sings a brief semi-affectionate ode in <span class="song">New York</span> (if you can affectionately call someone a motherfucker) &bull; Everytime I hear <span class="artist">Phosporescent</span>'s infectiously catchy <span class="song">New Birth In New England</span> I can't help but crank up the volume and sing along &bull; Somehow, I made it passed my mid-30s before I actually listened to the album Grace by <span class="artist">Jeff Buckley</span>. Obviously, I knew who he was (Hallelujah, durr), but perhaps I innately knew I wouldn't be emotionally ready until then. Goodness, almost any track on that album could have made it into this slot, but the raw feeling and soaring vocals of <span class="song">Lover, You Should Have Come Over</span> make it my top choice. I'm listening to it now - I change my mind, I'm not emotionally ready &bull; I originally had <span class="song">All Your Favourite Bands</span> by <span class="artist">Dawes</span> before JB on the playlist, but I realised I had to end it on a positive note and swapped the songs. All Your Favourite Bands isn't the world's most complex or musically challenging song, but what it is, is a near perfect sing-a-long anthem.</p>
+            <p>So these are the ten songs this month - expect more soon, but in the meantime, may all your favourite bands stay together.</p>
         </div>    
     </div>
 </body>
